--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -378,6 +378,134 @@
         <string>Bullet Visibility</string>
        </property>
       </widget>
+      <widget class="QLabel" name="label_Width">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>190</y>
+         <width>81</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Window Width</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_Height">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>213</y>
+         <width>91</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Window Height</string>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="spinBox_Width">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>190</y>
+         <width>51</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="minimum">
+        <number>0</number>
+       </property>
+       <property name="maximum">
+        <number>99999999</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="spinBox_Height">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>213</y>
+         <width>51</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="minimum">
+        <number>0</number>
+       </property>
+       <property name="maximum">
+        <number>99999999</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_PosX">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>190</y>
+         <width>81</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Window Pos X</string>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="spinBox_PosX">
+       <property name="geometry">
+        <rect>
+         <x>170</x>
+         <y>190</y>
+         <width>51</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="minimum">
+        <number>0</number>
+       </property>
+       <property name="maximum">
+        <number>99999999</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="spinBox_PosY">
+       <property name="geometry">
+        <rect>
+         <x>170</x>
+         <y>213</y>
+         <width>51</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="minimum">
+        <number>0</number>
+       </property>
+       <property name="maximum">
+        <number>99999999</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_PosY">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>213</y>
+         <width>81</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Window Pos Y</string>
+       </property>
+      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_SFX">
       <property name="geometry">
@@ -639,7 +767,7 @@
        </property>
       </widget>
      </widget>
-     <widget class="QGroupBox" name="groupBox_Gameplay">
+     <widget class="QGroupBox" name="groupBox_Misc">
       <property name="geometry">
        <rect>
         <x>330</x>
@@ -753,19 +881,6 @@
    <addaction name="menuMod_List"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionOpen_Mods">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>Open mods folder</string>
-   </property>
-  </action>
-  <action name="actionOpen_Config">
-   <property name="text">
-    <string>Open config file</string>
-   </property>
-  </action>
   <action name="actionReload">
    <property name="text">
     <string>Reload</string>
