--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,7 +17,10 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string notr="true">Rebirth Configurator</string>
+   <string notr="true">Rebirth configurator</string>
+  </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGroupBox" name="groupBox_GFX">
@@ -879,7 +882,6 @@
      <string>Language</string>
     </property>
     <addaction name="actionEnglish"/>
-    <addaction name="actionRussian"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuGame"/>
