--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -887,11 +887,56 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>60</y>
        <width>671</width>
-       <height>511</height>
+       <height>481</height>
       </rect>
      </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>461</width>
+       <height>24</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="modRadioButton_Name">
+     <property name="geometry">
+      <rect>
+       <x>490</x>
+       <y>30</y>
+       <width>91</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Mod Name</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">modsButtonGroup</string>
+     </attribute>
+    </widget>
+    <widget class="QRadioButton" name="modRadioButton_Folder">
+     <property name="geometry">
+      <rect>
+       <x>590</x>
+       <y>30</y>
+       <width>91</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Mod Folder</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string notr="true">modsButtonGroup</string>
+     </attribute>
     </widget>
    </widget>
   </widget>
@@ -1025,4 +1070,7 @@
   <include location="icons.qrc"/>
  </resources>
  <connections/>
+ <buttongroups>
+  <buttongroup name="modsButtonGroup"/>
+ </buttongroups>
 </ui>
